--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "material-symbols": "^0.21.3",
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.11.0",
     "ngx-color-picker": "^16.0.0",
